--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 			var pts = driving.getResults().getPlan(0).getRoute(0).getPath();    //通过驾车实例，获得一系列点的数组
 			var numSteps =driving.getResults().getPlan(0).getRoute(0);
 			var numLen = numSteps.getNumSteps();
-			function test(ss) {
-				for (var j=0;j<numLen;j++){
-					if(JSON.stringify(numSteps.getStep(j).getPosition()) === ss) {
+			var startNum =0;
+			function test(start,ss) {
+				for (var j=start;j<numLen;j++){
+					if(JSON.stringify(numSteps.getStep(j).getPosition()) === ss){
 						var text=numSteps.getStep(j).getDescription().match(/[\u4e00-\u9fa5]+\S+$/g)[0].replace(/(\<span\>)|(\<\/span\>)|(\<\/div\>)/g,'');
+						startNum = j;
 
 						var msg = new SpeechSynthesisUtterance();
 						var voices = window.speechSynthesis.getVoices();
@@ -71,7 +73,9 @@
 			i=0;
 			function resetMkPoint(i){
 				carMk.setPosition(pts[i]);
-				test(JSON.stringify(pts[i]));
+			//	if(i+1<paths &&JSON.stringify(pts[i+1])!==JSON.stringify(pts[i])){
+				test(startNum,JSON.stringify(pts[i]));
+			
 				if(i < paths){
 					setTimeout(function(){
 						i++;
@@ -80,7 +84,7 @@
 				}
 			}
 			setTimeout(function(){
-				resetMkPoint(5);
+				resetMkPoint(0);
 			},1000)
 
 		});
