--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@ var walking = new BMap.WalkingRoute(map, {renderOptions: {map: map, panel: "r-re
 			function comparePoint(start,ss) {
 				console.log(start);
 				for (var j=start+1;j<numLen;j++){
-					if(JSON.stringify(numSteps.getStep(j).getPosition()) === ss){
+				 //	if(JSON.stringify(numSteps.getStep(j).getPosition()) === ss){
+				 	var lat = (numSteps.getStep(j).getPosition().lat - JSON.parse(ss).lat);
+				 	var lng = (numSteps.getStep(j).getPosition().lng - JSON.parse(ss).lng);
+				 	console.log(lat*lat + lng*lng);
+				 	if(lat*lat + lng*lng < 0.00001){
 						var text=numSteps.getStep(j).getDescription().match(/[\u4e00-\u9fa5]+\S+$/g)[0].replace(/(\<span\>)|(\<\/span\>)|(\<\/div\>)/g,'');
 						startNum = j;
 						var msg = new SpeechSynthesisUtterance();
@@ -83,9 +87,9 @@ var walking = new BMap.WalkingRoute(map, {renderOptions: {map: map, panel: "r-re
 			}
 			setInterval(function(){
 				geolocation.getCurrentPosition(function(r){
-					console.log('getLocation');
 					if(this.getStatus() == BMAP_STATUS_SUCCESS){
 						comparePoint(startNum,JSON.stringify(r.point));
+						console.log('getLocation');
 						console.log(r.point);
 						mk.setPosition(r.point);
 					}
