--- a/wuBaidu.html
+++ b/wuBaidu.html
@@ -7,7 +7,7 @@
 		#l-map{height:300px;width:100%;}
 		#r-result,#r-result table{width:100%;}
 	</style>
-	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=kAAGNbgvunMxHmo5ugsVMoNGn5DZooTG"></script>
+	<script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=kAAGNbgvunMxHmo5ugsVMoNGn5DZooTG"></script>
 	<title>驾车导航的结果面板</title>
 </head>
 <body>
