注释冗余代码

--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -144,7 +144,8 @@ var walking = new BMap.WalkingRoute(map, {renderOptions: {map: map, panel: "r-re
 
 }
 
-	window.run = function (){
+
+/*	window.run = function (){
 		var driving = new BMap.WalkingRoute(map);    //驾车实例
 		driving.search("我的位置", "复旦大学");
 		driving.setSearchCompleteCallback(function(){
@@ -209,6 +210,6 @@ var walking = new BMap.WalkingRoute(map, {renderOptions: {map: map, panel: "r-re
 	setTimeout(function(){
 	//	run();
 	},1500);
-
+*/
 
 </script>
