--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -94,7 +94,7 @@ var walking = new BMap.WalkingRoute(map, {renderOptions: {map: map, panel: "r-re
 						msg.rate = 1; // 0.1 to 10
 						msg.pitch = 2; //0 to 2
 						msg.text = text;
-						msg.lang = 'zh';
+						//msg.lang = 'zh';
 						console.log(text);
 						speechSynthesis.speak(msg);
 						return ;
