--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -17,6 +17,11 @@
 </body>
 </html>
 <script type="text/javascript">
+window.onerror = function(errorMessage, scriptURI, lineNumber,columnNumber,errorObj) { 
+    // TODO
+    alert(errorMessage);
+}
+
 	// 百度地图API功能
 	var map = new BMap.Map("l-map");
 	map.centerAndZoom(new BMap.Point(116.404, 39.915), 15);
