代码格式优化

--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -5,7 +5,7 @@
         <style type="text/css">
             body, html {width: 100%; height: 100%; margin: 0; font-family: "微软雅黑";}
             #l-map {height: 300px; width: 100%;}
-            #r-result,#r-result table {width: 100%;}
+            #r-result, #r-result table {width: 100%;}
         </style>
         <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=kAAGNbgvunMxHmo5ugsVMoNGn5DZooTG"></script>
         <title>驾车导航的结果面板</title>
@@ -127,7 +127,7 @@
                     }
                 }, {enableHighAccuracy: true});
             } else {
-                alert("您选择地址没有解析到结果!");
+                alert('您选择地址没有解析到结果!');
             }
         });
     }
