--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -24,14 +24,6 @@
     var map = new BMap.Map('l-map');
     map.centerAndZoom(new BMap.Point(116.404, 39.915), 15);
 
-    // var myP1 = new BMap.Point(116.380967,39.913285);    //起点
-    // var myP2 = new BMap.Point(116.424374,39.914668);    //终点
-    // var myIcon = new BMap.Icon("http://lbsyun.baidu.com/jsdemo/img/Mario.png", new BMap.Size(32, 70), {    //小车图片
-    // //offset: new BMap.Size(0, -5),    //相当于CSS精灵
-    // imageOffset: new BMap.Size(0, 0)    //图片的偏移量。为了是图片底部中心对准坐标点。
-    //  });
-    // var driving2 = new BMap.DrivingRoute(map, {renderOptions:{map: map, panel: "r-result", autoViewport: true}});    //驾车实例
-    // driving2.search(myP1, myP2);    //显示一条公交线路
     var walking = new BMap.WalkingRoute(map, {renderOptions: {map: map, panel: 'r-result', autoViewport: true}});
     function navigation() {
         var myIcon = new BMap.Icon('./Mario.png', new BMap.Size(32, 70), {    //马里奥图片
@@ -46,7 +38,7 @@
             if (point) {
                 map.centerAndZoom(point, 16);
                 geolocation.getCurrentPosition(function(r) {
-                    if (this.getStatus() === BMAP_STATUS_SUCCESS) {
+                    if (this.getStatus() == BMAP_STATUS_SUCCESS) {
                         var mk = new BMap.Marker(r.point, {icon: myIcon});
                         map.addOverlay(mk);
                         console.log(r);
@@ -81,7 +73,7 @@
                                         console.log(lat * lat + lng * lng * jd * jd);
                                         var text = numSteps.getStep(j).getDescription().match(/[\u4e00-\u9fa5]+\S+$/g)[0].replace(/(\<span\>)|(\<\/span\>)|(\<\/div\>)/g,'');
                                         startNum = j;
-                                        var voices = window.speechSynthesis.getVoices();
+                                        // var voices = window.speechSynthesis.getVoices();
                                         var msg = new SpeechSynthesisUtterance();
                                         // msg.voice = voices[0]; //
                                         msg.volume = 1; // 0 to 1
@@ -96,7 +88,7 @@
                                 }
                             }
                             translateCallback = function (data) {
-                                if(data.status === 0) {
+                                if(data.status == 0) {
                                     var newp = new BMap.Point(data.points[0].lng, data.points[0].lat);
                                     comparePoint(startNum, JSON.stringify(newp));
                                     mk.setPosition(newp);
