--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -8,7 +8,7 @@
             #r-result, #r-result table {width: 100%;}
         </style>
         <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=kAAGNbgvunMxHmo5ugsVMoNGn5DZooTG"></script>
-        <title>驾车导航的结果面板</title>
+        <title>步行导航的结果面板</title>
     </head>
     <body>
         <div id="l-map"></div>
