--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
@@ -110,6 +111,13 @@
                                 // alert(newp.lng+','+newp.lat);
                                 i++;
                             //}
+                            },
+                            function(err) {
+                                console.log(err);
+                            }, {
+                                enableHighAccuracy: false,
+                                timeout: 5000,
+                                maximumAge: 0
                             });
                         });
                         // ggPoint = new BMap.Point(r.point.lng,r.point.lat);
