--- a/onLineNavigation.html
+++ b/onLineNavigation.html
@@ -118,9 +118,7 @@
                             function(err) {
                                 console.log(err);
                             }, {
-                                enableHighAccuracy: false,
-                                timeout: 5000,
-                                maximumAge: 0
+                                enableHighAccuracy: true
                             });
                         });
                         // ggPoint = new BMap.Point(r.point.lng,r.point.lat);
